[project]
name = "code-context-graph"
version = "0.2.0"
description = "Build a Neo4j knowledge graph from source code: AST parsing, git history, and LLM semantic enrichment."
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.20",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "gitpython>=3.1",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "tree-sitter>=0.25.2",
  "tree-sitter-python>=0.25.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-typescript>=0.23.2",
  "tree-sitter-go>=0.25.0",
  "tree-sitter-rust>=0.24.2",
  "tree-sitter-java>=0.23.5",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[project.scripts]
ccg = "code_context_graph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_context_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
