[project]
name = "financegraph-backend"
version = "0.1.0"
description = "Financial Services Context Graph Backend"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "neo4j>=5.20",
    "neo4j-agent-memory[litellm,sentence-transformers,extraction,fuzzy]>=0.4.0,<0.6.0",
    "langgraph>=0.1",
    "langchain-anthropic>=0.3",
    "click>=8.0",
    "openai>=1.0",
    "langchain-openai>=0.1",
    "deepagents>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",  # for fastapi.testclient.TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
